--- a/portfolio.html
+++ b/portfolio.html
@@ -32,8 +32,11 @@
                 </ul>
             </nav>
             <ul class="contact-top list">
-                <li class="item"><a href="mailto:info@devstudio.com" class="contact">info@devstudio.com</a></li>
-                <li class="item"><a href="tel:+380961111111" class="contact">+38 096 111 11 11</a></li>
+                <li class="item icon-envelope">
+                    <a href="mailto:info@devstudio.com" class="contact">info@devstudio.com</a>
+                </li>
+                <li class="item icon-smartphone">
+                    <a href="tel:+380961111111" class="contact">+38 096 111 11 11</a></li>
             </ul>
         </div>
     </header>
