--- a/index.html
+++ b/index.html
@@ -35,22 +35,22 @@
         </nav>
         <ul class="contact-top list">
           <li class="item">
-            <button class="social-top list">
+            <div class="social-top list">
               <svg class="icon" width="16" height="12">
                 <use href="./icon/sprite.svg#icon-envelope"></use>
               </svg>
               <a href="mailto:info@devstudio.com" class="contact"
                 >info@devstudio.com</a
               >
-            </button>
+            </div>
           </li>
           <li class="item icon-smartphone">
-            <button class="social-top list">
+            <div class="social-top list">
               <svg class="icon" width="10" height="16">
                 <use href="./icon/sprite.svg#icon-smartphone"></use>
               </svg>
               <a href="tel:+380961111111" class="contact">+38 096 111 11 11</a>
-            </button>
+            </div>
           </li>
         </ul>
       </div>
