обновлены соц. сети

--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
 
     <main>
       <section class="hero">
-        <div class="overlay">
-          <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-          <button type="button" class="button-top">Заказать услугу</button>
-        </div>
+        <h1 class="hero-title container">
+          Эффективные решения для вашего бизнеса
+        </h1>
+        <button type="button" class="button-top">Заказать услугу</button>
       </section>
 
       <!-- Преимущества -->
@@ -162,26 +162,29 @@
                 <h3 class="team">Игорь Демьяненко</h3>
                 <p class="position">Product Designer</p>
 
-                <button class="social">
-                  <svg class="social-icon" width="20" height="20">
-                    <use href="./icon/sprite.svg#icon-instagram"></use>
-                  </svg>
-                </button>
-                <button class="social">
-                  <svg class="social-icon" width="20" height="20">
-                    <use href="./icon/sprite.svg#icon-twitter"></use>
-                  </svg>
-                </button>
-                <button class="social">
-                  <svg class="social-icon" width="20" height="20">
-                    <use href="./icon/sprite.svg#icon-facebook"></use>
-                  </svg>
-                </button>
-                <button class="social">
-                  <svg class="social-icon" width="20" height="20">
-                    <use href="./icon/sprite.svg#icon-linkedin"></use>
-                  </svg>
-                </button>
+                <div class="element-icon">
+                  <a href class="social">
+                    <svg class="social-icon" width="20" height="20">
+                      <use href="./icon/sprite.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+
+                  <a href class="social">
+                    <svg class="social-icon" width="20" height="20">
+                      <use href="./icon/sprite.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                  <a href class="social">
+                    <svg class="social-icon" width="20" height="20">
+                      <use href="./icon/sprite.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                  <a href class="social">
+                    <svg class="social-icon" width="20" height="20">
+                      <use href="./icon/sprite.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </div>
               </div>
             </li>
 
@@ -190,26 +193,30 @@
               <div class="element">
                 <h3 class="team">Ольга Репина</h3>
                 <p class="position">Frontend Developer</p>
-                <button class="social">
-                  <svg class="social-icon" width="20" height="20">
-                    <use href="./icon/sprite.svg#icon-instagram"></use>
-                  </svg>
-                </button>
-                <button class="social">
-                  <svg class="social-icon" width="20" height="20">
-                    <use href="./icon/sprite.svg#icon-twitter"></use>
-                  </svg>
-                </button>
-                <button class="social">
-                  <svg class="social-icon" width="20" height="20">
-                    <use href="./icon/sprite.svg#icon-facebook"></use>
-                  </svg>
-                </button>
-                <button class="social">
-                  <svg class="social-icon" width="20" height="20">
-                    <use href="./icon/sprite.svg#icon-linkedin"></use>
-                  </svg>
-                </button>
+
+                <div class="element-icon">
+                  <a href class="social">
+                    <svg class="social-icon" width="20" height="20">
+                      <use href="./icon/sprite.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+
+                  <a href class="social">
+                    <svg class="social-icon" width="20" height="20">
+                      <use href="./icon/sprite.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                  <a href class="social">
+                    <svg class="social-icon" width="20" height="20">
+                      <use href="./icon/sprite.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                  <a href class="social">
+                    <svg class="social-icon" width="20" height="20">
+                      <use href="./icon/sprite.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </div>
               </div>
             </li>
 
@@ -218,26 +225,29 @@
               <div class="element">
                 <h3 class="team">Николай Тарасов</h3>
                 <p class="position">Marketing</p>
-                <button class="social">
-                  <svg class="social-icon" width="20" height="20">
-                    <use href="./icon/sprite.svg#icon-instagram"></use>
-                  </svg>
-                </button>
-                <button class="social">
-                  <svg class="social-icon" width="20" height="20">
-                    <use href="./icon/sprite.svg#icon-twitter"></use>
-                  </svg>
-                </button>
-                <button class="social">
-                  <svg class="social-icon" width="20" height="20">
-                    <use href="./icon/sprite.svg#icon-facebook"></use>
-                  </svg>
-                </button>
-                <button class="social">
-                  <svg class="social-icon" width="20" height="20">
-                    <use href="./icon/sprite.svg#icon-linkedin"></use>
-                  </svg>
-                </button>
+                <div class="element-icon">
+                  <a href class="social">
+                    <svg class="social-icon" width="20" height="20">
+                      <use href="./icon/sprite.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+
+                  <a href class="social">
+                    <svg class="social-icon" width="20" height="20">
+                      <use href="./icon/sprite.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                  <a href class="social">
+                    <svg class="social-icon" width="20" height="20">
+                      <use href="./icon/sprite.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                  <a href class="social">
+                    <svg class="social-icon" width="20" height="20">
+                      <use href="./icon/sprite.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </div>
               </div>
             </li>
 
@@ -247,26 +257,29 @@
                 <h3 class="team">Михаил Ермаков</h3>
                 <p class="position">UI Designer</p>
 
-                <button class="social">
-                  <svg class="social-icon" width="20" height="20">
-                    <use href="./icon/sprite.svg#icon-instagram"></use>
-                  </svg>
-                </button>
-                <button class="social">
-                  <svg class="social-icon" width="20" height="20">
-                    <use href="./icon/sprite.svg#icon-twitter"></use>
-                  </svg>
-                </button>
-                <button class="social">
-                  <svg class="social-icon" width="20" height="20">
-                    <use href="./icon/sprite.svg#icon-facebook"></use>
-                  </svg>
-                </button>
-                <button class="social">
-                  <svg class="social-icon" width="20" height="20">
-                    <use href="./icon/sprite.svg#icon-linkedin"></use>
-                  </svg>
-                </button>
+                <div class="element-icon">
+                  <a href class="social">
+                    <svg class="social-icon" width="20" height="20">
+                      <use href="./icon/sprite.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+
+                  <a href class="social">
+                    <svg class="social-icon" width="20" height="20">
+                      <use href="./icon/sprite.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                  <a href class="social">
+                    <svg class="social-icon" width="20" height="20">
+                      <use href="./icon/sprite.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                  <a href class="social">
+                    <svg class="social-icon" width="20" height="20">
+                      <use href="./icon/sprite.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </div>
               </div>
             </li>
           </ul>
