--- a/index.html
+++ b/index.html
@@ -33,24 +33,24 @@
             <li class="item"><a href="" class="link">Контакты</a></li>
           </ul>
         </nav>
+
         <ul class="contact-top list">
           <li class="item">
-            <div class="social-top list">
+            <a class="contact" href="mailto:info@devstudio.com">
               <svg class="icon" width="16" height="12">
                 <use href="./icon/sprite.svg#icon-envelope"></use>
               </svg>
-              <a href="mailto:info@devstudio.com" class="contact"
-                >info@devstudio.com</a
-              >
-            </div>
+              info@devstudio.com</a
+            >
           </li>
-          <li class="item icon-smartphone">
-            <div class="social-top list">
+
+          <li class="item">
+            <a href="tel:+380961111111" class="contact">
               <svg class="icon" width="10" height="16">
                 <use href="./icon/sprite.svg#icon-smartphone"></use>
               </svg>
-              <a href="tel:+380961111111" class="contact">+38 096 111 11 11</a>
-            </div>
+              +38 096 111 11 11</a
+            >
           </li>
         </ul>
       </div>
@@ -295,46 +295,46 @@
 
         <ul class="flex-cont list">
           <li class="item">
-            <button class="contact-icon">
+            <a href class="contact-icon">
               <svg class="icon" width="41" height="47">
                 <use href="./icon/sprite.svg#icon-group"></use>
               </svg>
-            </button>
+            </a>
           </li>
           <li class="item">
-            <button class="contact-icon">
+            <a href class="contact-icon">
               <svg class="icon" width="40" height="52">
                 <use href="./icon/sprite.svg#icon-group1"></use>
               </svg>
-            </button>
+            </a>
           </li>
           <li class="item">
-            <button class="contact-icon">
+            <a href class="contact-icon">
               <svg class="icon" width="44" height="42">
                 <use href="./icon/sprite.svg#icon-group2"></use>
               </svg>
-            </button>
+            </a>
           </li>
           <li class="item">
-            <button class="contact-icon">
+            <a href class="contact-icon">
               <svg class="icon" width="85" height="41">
                 <use href="./icon/sprite.svg#icon-group3"></use>
               </svg>
-            </button>
+            </a>
           </li>
           <li class="item">
-            <button class="contact-icon">
+            <a href class="contact-icon">
               <svg class="icon" width="63" height="46">
                 <use href="./icon/sprite.svg#icon-group4"></use>
               </svg>
-            </button>
+            </a>
           </li>
           <li class="item">
-            <button class="contact-icon">
+            <a href class="contact-icon">
               <svg class="icon" width="94" height="44">
                 <use href="./icon/sprite.svg#icon-group5"></use>
               </svg>
-            </button>
+            </a>
           </li>
         </ul>
       </div>
@@ -372,26 +372,28 @@
             <div class="join-list">
               <h3 class="join list">присоединяйтесь</h3>
 
-              <button class="social-botom">
-                <svg class="social-icon" width="20" height="20">
-                  <use href="./icon/sprite.svg#icon-instagram"></use>
-                </svg>
-              </button>
-              <button class="social-botom">
-                <svg class="social-icon" width="20" height="20">
-                  <use href="./icon/sprite.svg#icon-twitter"></use>
-                </svg>
-              </button>
-              <button class="social-botom">
-                <svg class="social-icon" width="20" height="20">
-                  <use href="./icon/sprite.svg#icon-facebook"></use>
-                </svg>
-              </button>
-              <button class="social-botom">
-                <svg class="social-icon" width="20" height="20">
-                  <use href="./icon/sprite.svg#icon-linkedin"></use>
-                </svg>
-              </button>
+              <div class="element-icon">
+                <a href class="social-botom">
+                  <svg class="social-icon" width="20" height="20">
+                    <use href="./icon/sprite.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+                <a href class="social-botom">
+                  <svg class="social-icon" width="20" height="20">
+                    <use href="./icon/sprite.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+                <a href class="social-botom">
+                  <svg class="social-icon" width="20" height="20">
+                    <use href="./icon/sprite.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+                <a href class="social-botom">
+                  <svg class="social-icon" width="20" height="20">
+                    <use href="./icon/sprite.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </div>
             </div>
           </li>
         </ul>
