--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
         <div class="container">
           <ul class="feature-list list">
             <li class="item list-item">
-              <button class="feature-icon list">
+              <div class="feature-icon list">
                 <svg class="icon" width="70" height="70">
                   <use href="./icon/sprite.svg#icon-antena"></use>
                 </svg>
-              </button>
+              </div>
               <h3 class="section-title list">Внимание к деталям</h3>
               <p class="title">
                 Идейные соображения, а также начало повседневной работы по
@@ -83,11 +83,11 @@
             </li>
 
             <li class="item list-item">
-              <button class="feature-icon list">
+              <div class="feature-icon list">
                 <svg class="icon" width="70" height="70">
                   <use href="./icon/sprite.svg#icon-clock"></use>
                 </svg>
-              </button>
+              </div>
               <h3 class="section-title">Пунктуальность</h3>
 
               <p class="title">
@@ -97,11 +97,11 @@
             </li>
 
             <li class="item list-item">
-              <button class="feature-icon list">
+              <div class="feature-icon list">
                 <svg class="icon" width="70" height="70">
                   <use href="./icon/sprite.svg#icon-Vector"></use>
                 </svg>
-              </button>
+              </div>
               <h3 class="section-title">Планирование</h3>
 
               <p class="title">
@@ -111,11 +111,11 @@
             </li>
 
             <li class="item list-item">
-              <button class="feature-icon list">
+              <div class="feature-icon list">
                 <svg class="icon" width="70" height="70">
                   <use href="./icon/sprite.svg#icon-astronaut"></use>
                 </svg>
-              </button>
+              </div>
               <h3 class="section-title">Современные технологии</h3>
 
               <p class="title">
