--- a/portfolio.html
+++ b/portfolio.html
@@ -33,22 +33,21 @@
         </nav>
         <ul class="contact-top list">
           <li class="item">
-            <div class="social-top list">
+            <a class="contact" href="mailto:info@devstudio.com">
               <svg class="icon" width="16" height="12">
                 <use href="./icon/sprite.svg#icon-envelope"></use>
               </svg>
-              <a href="mailto:info@devstudio.com" class="contact"
-                >info@devstudio.com</a
-              >
-            </div>
+              info@devstudio.com</a
+            >
           </li>
-          <li class="item icon-smartphone">
-            <div class="social-top list">
+
+          <li class="item">
+            <a href="tel:+380961111111" class="contact">
               <svg class="icon" width="10" height="16">
                 <use href="./icon/sprite.svg#icon-smartphone"></use>
               </svg>
-              <a href="tel:+380961111111" class="contact">+38 096 111 11 11</a>
-            </div>
+              +38 096 111 11 11</a
+            >
           </li>
         </ul>
       </div>
@@ -59,7 +58,7 @@
     <main>
       <section class="section menu">
         <div class="container">
-          <ul class="portfolio-filter">
+          <ul class="portfolio-filter list">
             <li>
               <button type="button" class="button-menu">Все</button>
             </li>
@@ -190,7 +189,7 @@
               </a>
             </li>
 
-            <li class="flex-element border">
+            <li class="flex-element">
               <a href=""
                 ><img
                   src="./works/GrowingBusiness.jpg"
