--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
     <header class="page-header">
       <div class="container main-nav">
         <nav class="nav-top">
-          <a href="/" class="logo item">
+          <a href="./index.html" class="logo item">
             Web<span class="logo-sc item">Studio</span>
           </a>
           <ul class="site-nav list">
-            <li class="item"><a href="" class="page">Студия</a></li>
+            <li class="item"><a href="./index.html" class="page">Студия</a></li>
             <li class="item">
               <a href="./portfolio.html" class="link">Портфолио</a>
             </li>
@@ -347,7 +347,7 @@
         <ul class="flex-footer list">
           <li>
             <div class="logotype">
-              <a href="/" class="logo-ft">
+              <a href="./index.html" class="logo-ft">
                 Web<span class="logo-footer">Studio</span>
               </a>
             </div>
