--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
     <header class="page-header">
       <div class="container main-nav">
         <nav class="nav-top">
-          <a href="/" class="logo item">
+          <a href="./index.html" class="logo item">
             Web<span class="logo-sc item">Studio</span>
           </a>
 
@@ -214,7 +214,7 @@
         <ul class="flex-footer list">
           <li>
             <div class="logotype">
-              <a href="/" class="logo-ft">
+              <a href="./index.html" class="logo-ft">
                 Web<span class="logo-footer">Studio</span>
               </a>
             </div>
