обновлён спрайт и стили

--- a/portfolio.html
+++ b/portfolio.html
@@ -82,7 +82,7 @@
         <div class="container">
           <ul class="portfolio-list list">
             <li class="flex-element">
-              <a href="">
+              <a class="card" href="">
                 <img src="./works/Технокряк.jpg" alt="Технокряк" width="370" />
                 <div class="element-border">
                   <h3 class="description">Технокряк</h3>
@@ -92,7 +92,7 @@
             </li>
 
             <li class="flex-element">
-              <a href=""
+              <a class="card" href=""
                 ><img
                   src="./works/ПостерNewOrleanvsGoldenStar.jpg"
                   alt="Постер New Orlean vs Golden Star"
@@ -106,7 +106,7 @@
             </li>
 
             <li class="flex-element">
-              <a href="">
+              <a class="card" href="">
                 <img
                   src="./works/Ресторан.jpg"
                   alt="Ресторан Seafood"
@@ -120,7 +120,7 @@
             </li>
 
             <li class="flex-element">
-              <a href=""
+              <a class="card" href=""
                 ><img
                   src="./works/ПроектPrime.jpg"
                   alt="Проект Prime"
@@ -134,7 +134,7 @@
             </li>
 
             <li class="flex-element">
-              <a href=""
+              <a class="card" href=""
                 ><img
                   src="./works/ПроектBoxes.jpg"
                   alt="Проект Boxes"
@@ -148,7 +148,7 @@
             </li>
 
             <li class="flex-element">
-              <a href=""
+              <a class="card" href=""
                 ><img
                   src="./works/InspirationhasnoBorders.jpg"
                   alt="Inspiration has no Borders"
@@ -162,7 +162,7 @@
             </li>
 
             <li class="flex-element">
-              <a href=""
+              <a class="card" href=""
                 ><img
                   src="./works/ИзданиеLimitedEdition.jpg"
                   alt="Издание Limited Edition"
@@ -176,7 +176,7 @@
             </li>
 
             <li class="flex-element">
-              <a href=""
+              <a class="card" href=""
                 ><img
                   src="./works/ПроектLAB.jpg"
                   alt="Проект LAB"
@@ -190,7 +190,7 @@
             </li>
 
             <li class="flex-element">
-              <a href=""
+              <a class="card" href=""
                 ><img
                   src="./works/GrowingBusiness.jpg"
                   alt="Growing Business"
