--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <li class="item list-item">
               <div class="feature-icon list">
                 <svg class="icon" width="70" height="70">
-                  <use href="./icon/sprite.svg#icon-Vector"></use>
+                  <use href="./icon/sprite.svg#icon-vector"></use>
                 </svg>
               </div>
               <h3 class="section-title">Планирование</h3>
@@ -296,42 +296,42 @@
         <ul class="flex-cont list">
           <li class="item">
             <a href class="contact-icon">
-              <svg class="icon" width="41" height="47">
+              <svg class="icon" width="106" height="60">
                 <use href="./icon/sprite.svg#icon-group"></use>
               </svg>
             </a>
           </li>
           <li class="item">
             <a href class="contact-icon">
-              <svg class="icon" width="40" height="52">
+              <svg class="icon" width="106" height="60">
                 <use href="./icon/sprite.svg#icon-group1"></use>
               </svg>
             </a>
           </li>
           <li class="item">
             <a href class="contact-icon">
-              <svg class="icon" width="44" height="42">
+              <svg class="icon" width="106" height="60">
                 <use href="./icon/sprite.svg#icon-group2"></use>
               </svg>
             </a>
           </li>
           <li class="item">
             <a href class="contact-icon">
-              <svg class="icon" width="85" height="41">
+              <svg class="icon" width="106" height="60">
                 <use href="./icon/sprite.svg#icon-group3"></use>
               </svg>
             </a>
           </li>
           <li class="item">
             <a href class="contact-icon">
-              <svg class="icon" width="63" height="46">
+              <svg class="icon" width="106" height="60">
                 <use href="./icon/sprite.svg#icon-group4"></use>
               </svg>
             </a>
           </li>
           <li class="item">
             <a href class="contact-icon">
-              <svg class="icon" width="94" height="44">
+              <svg class="icon" width="106" height="60">
                 <use href="./icon/sprite.svg#icon-group5"></use>
               </svg>
             </a>
